[project]
name = "workflow-pieces-mcp"
version = "0.1.0"
description = "MCP server for workflow-pieces integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "rapidfuzz>=3.14.3",
]
